--- a/lesson-05/index.html
+++ b/lesson-05/index.html
@@ -4,94 +4,111 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Table</title>
+		<title>Page Layout</title>
+
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700&display=swap"
+			rel="stylesheet"
+		/>
+		<style>
+			* {
+				margin: 0;
+				padding: 0;
+				box-sizing: border-box;
+			}
+			body {
+				font-family: 'Plus Jakarta Sans', sans-serif;
+			}
+			header {
+				background-color: #f1f1f1;
+				padding: 1rem;
+			}
+			main {
+				padding: 1rem;
+			}
+			footer {
+				background-color: #f1f1f1;
+				padding: 1rem;
+			}
+		</style>
 	</head>
 	<body>
-		<header>
-			<h1>TABLE</h1>
-		</header>
-		<main>
-			<style>
-				table {
-					width: 100%;
-				}
-				table,
-				th,
-				td {
-					border: 1px solid black;
-					border-collapse: collapse;
-				}
-				th,
-				td {
-					padding: 5px;
-				}
-			</style>
-			<table>
-				<tbody>
-					<tr>
-						<th rowspan="11">TCB</th>
-						<th>Order no:</th>
-						<td colspan="3">#ABC001</td>
-					</tr>
-					<tr>
-						<th>Order date:</th>
-						<td colspan="3">23-Mar-2016</td>
-					</tr>
-					<tr>
-						<th colspan="4">Customer</th>
-					</tr>
-					<tr>
-						<th>Name:</th>
-						<td colspan="3">John Papas</td>
-					</tr>
-					<tr>
-						<th>Address:</th>
-						<td colspan="3">1 Infinite Loop, Cupertino, CA 95014</td>
-					</tr>
-					<tr>
-						<th colspan="4">Order Details</th>
-					</tr>
-					<tr>
-						<th>1</th>
-						<td>Of mice and men</td>
-						<td>Book</td>
-						<td>10.00$</td>
-					</tr>
-					<tr>
-						<th>2</th>
-						<td>Of mice and men</td>
-						<td>Book</td>
-						<td>10.00$</td>
-					</tr>
-					<tr>
-						<th>3</th>
-						<td>Of mice and men</td>
-						<td>Book</td>
-						<td>10.00$</td>
-					</tr>
-					<tr>
-						<th>4</th>
-						<td>Of mice and men</td>
-						<td>Book</td>
-						<td>10.00$</td>
-					</tr>
-					<tr>
-						<th style="text-align: end" colspan="3">Total:</th>
-						<td>40.00 $</td>
-					</tr>
-				</tbody>
-				<caption>
-					Order Details Table
-				</caption>
-			</table>
-		</main>
-		<!-- <script>
-			window.location.href = 'https://www.w3schools.com/html/html_tables.asp';
-		</script> -->
-		<!-- &lt;script&gt; window.location.href =
-		"https://www.w3schools.com/html/html_tables.asp"; &lt;/script&gt; -->
-		<footer>
-			<p>&copy; 2021</p>
-		</footer>
+		<table border="1px" width="100%">
+			<tr>
+				<td colspan="2" style="height: 70px; background-color: rgb(88, 211, 248)">
+					<div role="heading">
+						<h1>Header</h1>
+					</div>
+				</td>
+			</tr>
+			<tr>
+				<td
+					style="height: 810px; width: 250px; background-color: rgb(146, 243, 161)"
+				>
+					<div role="navigation">
+						<h2>Navigation</h2>
+						<div role="list">
+							<div role="listitem">
+								<a href="#">Home</a>
+							</div>
+							<div role="listitem">
+								<a href="#">About</a>
+							</div>
+							<div role="listitem">
+								<a href="#">Contact</a>
+							</div>
+						</div>
+					</div>
+				</td>
+				<td>
+					<div role="main">
+						<h2>Main Content</h2>
+						<div role="article">
+							<h3>Article 1</h3>
+							<p>
+								Lorem ipsum dolor, sit amet consectetur adipisicing elit. In, sint? Modi
+								iusto dolores mollitia, voluptates officiis fugit delectus laudantium,
+								qui sapiente praesentium necessitatibus obcaecati quidem. Expedita saepe
+								porro aliquam itaque ipsum delectus obcaecati alias facere pariatur
+								praesentium voluptatibus, odit quae maiores id excepturi non quo, ex
+								consectetur? Minus impedit dolorum nihil expedita amet, distinctio
+								deleniti non quia neque culpa dolores odit doloribus accusamus, natus
+								praesentium at aliquam. Voluptatem assumenda tempore officia, numquam
+								voluptates quia voluptatibus placeat. Sunt architecto temporibus
+								eligendi odio, reprehenderit blanditiis exercitationem, sit consectetur
+								illo nam voluptatum autem tempora, commodi non perspiciatis ab quas ex
+								at suscipit? Quibusdam, culpa natus minus nulla dolorem quam possimus
+								modi deleniti, eum qui odio, a facere eligendi sequi repellendus
+								voluptates nemo dignissimos sapiente. Veritatis, impedit similique modi
+								libero, officia rem adipisci id obcaecati explicabo ea omnis reiciendis
+								ab tempora perferendis, sed fugit. Consequuntur, cumque temporibus eius
+								quis nulla porro at earum illo esse non, sit, facilis voluptatem
+								blanditiis sunt est officia amet. Ipsam velit possimus exercitationem
+								eos nostrum blanditiis deserunt asperiores eveniet, corporis obcaecati
+								quos debitis veniam autem cum pariatur accusamus, repudiandae aspernatur
+								laudantium facilis dolore recusandae. Libero labore velit suscipit harum
+								necessitatibus est repudiandae itaque quos alias consequatur totam
+								doloremque eius a perferendis corporis magni placeat at cupiditate sint
+								architecto, assumenda dolore, ullam quod incidunt. Doloribus, quia
+								veritatis sunt libero voluptatum fugit cum amet exercitationem illo
+								ipsam id. Nemo minus quis dolorum, autem itaque labore cumque eum sit
+								deserunt adipisci error. Eius repellat adipisci consequatur maiores a
+								minima, libero fugiat quidem beatae, laudantium sapiente commodi
+								accusamus et eum nemo nisi placeat atque possimus?
+							</p>
+						</div>
+					</div>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="2">
+					<div role="doc-endnote">
+						<h2>Footer</h2>
+					</div>
+				</td>
+			</tr>
+		</table>
 	</body>
 </html>
