feat: add clipboard landing styles, global, reset

--- a/CSS/lesson-12/clipboard-landing/index.html
+++ b/CSS/lesson-12/clipboard-landing/index.html
@@ -3,13 +3,148 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Clipboard Landing</title>
+  <!-- displays site properly based on user's device -->
+
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <title>Clipboard landing page</title>
+
+  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <style>
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
+  </style>
+
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="global.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+  <div class="header">
+  </div>
+
+  <section class="container-sm hero f-center f-column">
+    <img class="logo" src="./images/logo.svg" />
+    <h1 class="title m-b-3">A history of everything you copy</h1>
+    <p class="text-lg text-center m-b-4">
+      Clipboard allows you to track and organize everything you
+      copy. Instantly access your clipboard on all your devices.
+    </p>
+
+    <div class="btn-group f-center">
+      <button class="btn ios">
+        Download for iOS
+      </button>
+      <button class="btn macos">
+        Download for Mac
+      </button>
+    </div>
+  </section>
+
+  <section class="container-sm f-center f-column">
+    <h2 class="title m-b-3">Keep track of your snippets</h2>
+    <p class="text-md text-center m-b-4">
+      Clipboard instantly stores any item you copy in the cloud,
+      meaning you can access your snippets immediately on all your
+      devices. Our Mac and iOS apps will help you organize everything.
+    </p>
+  </section>
+
+
+
+
+  <section class="feature">
+    <img src="./images/image-computer.png" alt="computer">
+
+    <ul>
+      <li class="m-b-5">
+        <h3 class="title">
+          Quick Search
+        </h3>
+        <p class="text-sm">
+          Easily search your snippets by content, category, web address, application, and more.
+        </p>
+      </li>
+      <li class="m-b-5">
+        <h3 class="title">
+          iCloud Sync
+        </h3>
+        <p class="text-sm">
+          Instantly saves and syncs snippets across all your devices.
+        </p>
+      </li>
+      <li>
+        <h3 class="title">
+          Complete History
+        </h3>
+        <p class="text-sm">
+          Retrieve any snippets from the first moment you started using the app.
+        </p>
+      </li>
+    </ul>
+  </section>
+
+  <section class="container-sm f-center f-column">
+    <h2 class="title m-b-3">Access Clipboard anywhere</h2>
+    <p class="text-md text-center m-b-4">
+      Whether you’re on the go, or at your computer, you can access all your Clipboard
+      snippets in a few simple clicks.
+    </p>
+  </section>
+
+
+  <section class="container-md devices">
+    <img src="./images/image-devices.png" alt="devices" />
+  </section>
+
+
+
+
+  Supercharge your workflow
+
+  We’ve got the tools to boost your productivity.
+
+  Create blacklists
+
+  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
+
+  Plain text snippets
+
+  Remove unwanted formatting from copied text for a consistent look.
+
+  Sneak preview
+
+  Quick preview of all snippets on your Clipboard for easy access.
+
+  Clipboard for iOS and Mac OS
+
+  Available for free on the App Store. Download for Mac or iOS, sync with iCloud
+  and you’re ready to start adding to your clipboard.
+
+  Download for iOS
+  Download for Mac
+
+  FAQs
+  Contact Us
+  Privacy Policy
+  Press Kit
+  Install Guide
+
+  <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Your Name Here</a>.
+    </p>
+  </footer>
 </body>
 
 </html>
