feat: add animations to clipb app

--- a/CSS/lesson-12/clipboard-landing/index.html
+++ b/CSS/lesson-12/clipboard-landing/index.html
@@ -25,6 +25,7 @@
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="global.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="animate.css">
 </head>
 
 <body>
@@ -33,9 +34,9 @@
   </div>
 
   <section class="container-sm hero f-center f-column">
-    <img class="logo" src="./images/logo.svg" />
-    <h1 class="title m-b-3">A history of everything you copy</h1>
-    <p class="text-lg text-center m-b-4">
+    <img class="logo animate fade-up" src="./images/logo.svg" />
+    <h1 class="title m-b-3 animate fade-in">A history of everything you copy</h1>
+    <p class="text-lg text-center m-b-4 animate fade-in">
       Clipboard allows you to track and organize everything you
       copy. Instantly access your clipboard on all your devices.
     </p>
