feat: add lesson 15

--- a/CSS/lesson-15/index.html
+++ b/CSS/lesson-15/index.html
@@ -9,49 +9,119 @@
 
   <title>Skilled e-learning landing page</title>
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+  <!-- <link rel="stylesheet" href="style.css"> -->
+
 </head>
 
 <body>
 
-  Get Started
+  <div class="container">
+    <nav class="d-flex justify-content-between">
+      <a href="#">
+        <img src="./assets/logo-dark.svg" alt="logo" class="img-fluid">
+      </a>
 
-  Maximize skill, minimize budget
+      <a href="#" class="btn btn-primary rounded-5">Get Started</a>
+    </nav>
+  </div>
 
-  Our modern courses across a range of in-demand skills will give you the
-  knowledge you need to live the life you want.
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-6 p-md-5">
+        <h1>Maximize skill, minimize budget</h1>
 
-  Get Started
+        <p>Our modern courses across a range of in-demand skills will give you the
+          knowledge you need to live the life you want.</p>
 
-  Check out our most popular courses!
+        <a href="#" class="btn btn-primary rounded-5">Get Started</a>
+      </div>
 
-  Animation
-  Learn the latest animation techniques to create stunning motion
-  design and captivate your audience.
-  Get Started
+      <div class="col-md-6">
+        <img class="img-fluid" src="./assets/image-hero-desktop.webp" alt="hero">
+      </div>
+    </div>
+  </div>
 
-  Design
-  Create beautiful, usable interfaces to help shape the future of
-  how the web looks.
-  Get Started
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-4 d-flex align-items-center justify-content-center">
+        <h2>Check out our most popular courses!</h2>
+      </div>
+      <div class="col-xl-4">
+        <div class="card">
+          <img class="img-thumbnail" style="width: 30px" src="./assets/icon-animation.svg" alt="animation">
+          <h3>Animation</h3>
 
-  Photography
-  Explore critical fundamentals like lighting, composition, and focus
-  to capture exceptional photos.
-  Get Started
+          <p>Learn the latest animation techniques to create stunning motion
+            design and captivate your audience.</p>
 
-  Crypto
-  All you need to know to get started investing in crypto. Go from beginner
-  to advanced with this 54 hour course.
-  Get Started
+          <a href="#" class="btn btn-outline-primary rounded-5">Get Started</a>
+        </div>
+      </div>
+      <div class="col-xl-4">
+        <div class="card">
+          <img class="img-thumbnail" style="width: 30px" src="./assets/icon-design.svg" alt="design">
+          <h3>Design</h3>
 
-  Business
-  A step-by-step playbook to help you start, scale, and sustain your business
-  without outside investment.
-  Get Started
+          <p>Create beautiful, usable interfaces to help shape the future of
+            how the web looks.</p>
 
-  Get Started
+          <a href="#" class="btn btn-outline-primary rounded-5">Get Started</a>
+        </div>
+      </div>
+      <div class="col-xl-4">
+        <div class="card">
+          <img class="img-thumbnail" style="width: 30px" src="./assets/icon-photography.svg" alt="photography">
+          <h3>Photography</h3>
+
+          <p>Explore critical fundamentals like lighting, composition, and focus
+            to capture exceptional photos.</p>
+
+          <a href="#" class="btn btn-outline-primary rounded-5">Get Started</a>
+        </div>
+      </div>
+      <div class="col-xl-4">
+        <div class="card">
+          <img class="img-thumbnail" style="width: 30px" src="./assets/icon-crypto.svg" alt="crypto">
+          <h3>Crypto</h3>
+
+          <p>All you need to know to get started investing in crypto. Go from beginner
+            to advanced with this 54 hour course.</p>
+
+          <a href="#" class="btn btn-outline-primary rounded-5">Get Started</a>
+        </div>
+      </div>
+      <div class="col-xl-4">
+        <div class="card">
+          <img class="img-thumbnail" style="width: 30px" src="./assets/icon-business.svg" alt="business">
+          <h3>Business</h3>
+
+          <p>A step-by-step playbook to help you start, scale, and sustain your business
+            without outside investment.</p>
+
+          <a href="#" class="btn btn-outline-primary rounded-5">Get Started</a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <footer class="bg-black">
+    <div class="container d-flex justify-content-between align-items-center">
+      <a href="#" class="">
+        <img src="./assets/logo-light.svg" alt="logo" class="img-fluid">
+      </a>
+
+      <a href="#" class="btn btn-primary rounded-5">Get Started</a>
+    </div>
+  </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
     integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
