--- a/JavaScript/lesson-19/index.html
+++ b/JavaScript/lesson-19/index.html
@@ -13,7 +13,8 @@
     Hello JavaScript!
   </h1>
 
-  <script src="script.js"></script>
+  <!-- <script src="script.js"></script> -->
+  <script src="task.js"></script>
 </body>
 
 </html>
